// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all pages page '404 Not Found' should match the last snapshot 1`] = `
<div>
  404 Not Found
</div>
`;

exports[`all pages page 'About' should match the last snapshot 1`] = `
<div
  className="PageWrapper__Wrapper-bwihxq-0 jedrlc"
>
  <h1
    className="Header__DarkBlue-zt7fth-0 eCcsLu"
  >
    <img
      className="PageWrapper__Logo-bwihxq-1 hoiyYK"
      src="mocked://src/shared/components/PageWrapper/logo-f0756fa86850a0f3bc772d7ba8dd6aa7.svg"
    />
    About
  </h1>
  <ul
    className="NavBar__List-pvivyq-0 JFDnC"
  >
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/nowhere"
        onClick={[Function]}
      >
        Nowhere
      </a>
    </li>
  </ul>
  <section>
    <p>
      This is an about section. This is just the boilerplate code, so here's a cute pug.
    </p>
    <img
      src="mocked://src/shared/pages/about/pug-fcb5dcd13f1ad6e6efe6fcd6c49f2d15.jpg"
      width={800}
    />
    <p>
      Feel free to replace with whatever you desire.
    </p>
  </section>
</div>
`;

exports[`all pages page 'Home Page' should match the last snapshot 1`] = `
<div
  className="PageWrapper__Wrapper-bwihxq-0 jedrlc"
>
  <h1
    className="Header__DarkBlue-zt7fth-0 eCcsLu"
  >
    <img
      className="PageWrapper__Logo-bwihxq-1 hoiyYK"
      src="mocked://src/shared/components/PageWrapper/logo-f0756fa86850a0f3bc772d7ba8dd6aa7.svg"
    />
    Home Page
  </h1>
  <ul
    className="NavBar__List-pvivyq-0 JFDnC"
  >
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li
      className="NavBar__Item-pvivyq-1 dvvGHr"
    >
      <a
        href="/nowhere"
        onClick={[Function]}
      >
        Nowhere
      </a>
    </li>
  </ul>
  <section>
    <div>
      Hello world from the app!
    </div>
  </section>
</div>
`;
